* added printing datetime to gc log entries * saving gc logs to a separate file